{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 20,
  "lineage": "77717881-4314-5c60-ef84-fd4c0b961fdc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:internet-gateway/igw-0939f10be0993be3d",
            "id": "igw-0939f10be0993be3d",
            "owner_id": "937749309122",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-ecs-igw"
            },
            "tags_all": {
              "Name": "springboot-ecs-igw"
            },
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "igw-0939f10be0993be3d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:loadbalancer/app/springboot-ecs-alb/d4795001b8f08360",
            "arn_suffix": "app/springboot-ecs-alb/d4795001b8f08360",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "springboot-ecs-alb-1118332449.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:loadbalancer/app/springboot-ecs-alb/d4795001b8f08360",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "springboot-ecs-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-04ff5c873fe78896c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-083ac7e2a8332f58b"
              },
              {
                "subnet_id": "subnet-0d660b0ada0fd0c8e"
              }
            ],
            "subnets": [
              "subnet-083ac7e2a8332f58b",
              "subnet-0d660b0ada0fd0c8e"
            ],
            "tags": {
              "Name": "springboot-ecs-alb"
            },
            "tags_all": {
              "Name": "springboot-ecs-alb"
            },
            "vpc_id": "vpc-05ba0fdbffd56ce78",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:loadbalancer/app/springboot-ecs-alb/d4795001b8f08360"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:listener/app/springboot-ecs-alb/d4795001b8f08360/6739dadd431ccaa6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:targetgroup/springboot-ecs-tg/790e2a3855c0bc10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:listener/app/springboot-ecs-alb/d4795001b8f08360/6739dadd431ccaa6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:loadbalancer/app/springboot-ecs-alb/d4795001b8f08360",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:listener/app/springboot-ecs-alb/d4795001b8f08360/6739dadd431ccaa6"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:targetgroup/springboot-ecs-tg/790e2a3855c0bc10",
            "arn_suffix": "targetgroup/springboot-ecs-tg/790e2a3855c0bc10",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:targetgroup/springboot-ecs-tg/790e2a3855c0bc10",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "springboot-ecs-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "springboot-ecs-tg"
            },
            "tags_all": {
              "Name": "springboot-ecs-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937749309122:targetgroup/springboot-ecs-tg/790e2a3855c0bc10"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:route-table/rtb-068533a021f652f75",
            "id": "rtb-068533a021f652f75",
            "owner_id": "937749309122",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0939f10be0993be3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "springboot-ecs-public-rt"
            },
            "tags_all": {
              "Name": "springboot-ecs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "rtb-068533a021f652f75",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016d686e0272b9bed",
            "region": "ap-south-1",
            "route_table_id": "rtb-068533a021f652f75",
            "subnet_id": "subnet-0d660b0ada0fd0c8e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "rtbassoc-016d686e0272b9bed",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd50e5756885483",
            "region": "ap-south-1",
            "route_table_id": "rtb-068533a021f652f75",
            "subnet_id": "subnet-083ac7e2a8332f58b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "rtbassoc-04bd50e5756885483",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:security-group/sg-04ff5c873fe78896c",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ff5c873fe78896c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "springboot-ecs-alb-sg",
            "name_prefix": "",
            "owner_id": "937749309122",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "springboot-ecs-alb-sg"
            },
            "tags_all": {
              "Name": "springboot-ecs-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "sg-04ff5c873fe78896c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:security-group/sg-0b4e4213ccb0edaa7",
            "description": "Security group for ECS Tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4e4213ccb0edaa7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ff5c873fe78896c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "springboot-ecs-ecs-sg",
            "name_prefix": "",
            "owner_id": "937749309122",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "springboot-ecs-ecs-sg"
            },
            "tags_all": {
              "Name": "springboot-ecs-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "sg-0b4e4213ccb0edaa7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:subnet/subnet-0d660b0ada0fd0c8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d660b0ada0fd0c8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937749309122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-ecs-public-1"
            },
            "tags_all": {
              "Name": "springboot-ecs-public-1"
            },
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "subnet-0d660b0ada0fd0c8e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:subnet/subnet-083ac7e2a8332f58b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083ac7e2a8332f58b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937749309122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-ecs-public-2"
            },
            "tags_all": {
              "Name": "springboot-ecs-public-2"
            },
            "vpc_id": "vpc-05ba0fdbffd56ce78"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "subnet-083ac7e2a8332f58b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937749309122:vpc/vpc-05ba0fdbffd56ce78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b1a977b6e54a6c88",
            "default_route_table_id": "rtb-03506a4ed93f382e4",
            "default_security_group_id": "sg-03e7b9d89c5b0add0",
            "dhcp_options_id": "dopt-045c7d5fde7a82d60",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ba0fdbffd56ce78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03506a4ed93f382e4",
            "owner_id": "937749309122",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-ecs-vpc"
            },
            "tags_all": {
              "Name": "springboot-ecs-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "937749309122",
            "id": "vpc-05ba0fdbffd56ce78",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}